# django-tenant-users

./: .git-blame-ignore-revs  .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  build.sh  clean.sh  docker-compose.yml  manage.py  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
config/: .env.template
django_test_app/: settings.py
django_test_app/bookings/: apps.py  models.py  serializers.py  views.py
django_test_app/bookings/migrations/: 0001_initial.py
django_test_app/companies/: apps.py  models.py
django_test_app/companies/migrations/: 0001_initial.py  0002_company_owner.py  0003_alter_company_created_alter_company_modified.py  0004_company_type.py  0005_domain_notes.py
django_test_app/users/: apps.py  models.py
django_test_app/users/migrations/: 0001_initial.py
docker/: Dockerfile  ci.sh
docs/: conf.py  index.rst
docs/pages/: concepts.rst  conributing.rst  installation.rst  models.rst  permissions.rst  using.rst  utilities.rst
dtu_test_project/: manage.py
dtu_test_project/core/: tenant_views.py  views.py
dtu_test_project/core/management/commands/: setup_dtu_tenants.py
dtu_test_project/customers/: admin.py  models.py
dtu_test_project/customers/migrations/: 0001_initial.py  0002_client_owner.py  0003_remove_client_domain_url.py
dtu_test_project/dtu_test_project/: settings.py  urls.py  urls_public.py  urls_tenants.py  wsgi.py
dtu_test_project/templates/core/: main.html  tenant.html
dtu_test_project/users/: admin.py  models.py
dtu_test_project/users/migrations/: 0001_initial.py  0002_auto_20170223_0528.py
tenant_users/: compat.py  constants.py
tenant_users/companies/: models.py  tasks.py  utils.py
tenant_users/permissions/: apps.py  backend.py  backends.py  functional.py  functional.pyi  models.py  roles.py  utils.py
tenant_users/permissions/migrations/: 0001_initial.py  0002_add_timestamps.py
tenant_users/tenants/: __init__.py  apps.py  middleware.py  models.py  models.pyi  tasks.py  utils.py
tenant_users/tenants/management/commands/: create_public_tenant.py
test_django_tenants/companies/: apps.py  models.py
test_django_tenants/test_django_tenants/: settings.py  urls.py  wsgi.py
test_django_tenants/users/: apps.py  models.py
test_django_tenants/users/migrations/: 0001_initial.py
test_project/: settings.py
test_project/companies/: models.py
test_project/companies/migrations/: 0001_initial.py
test_project/users/: models.py
test_project/users/migrations/: 0001_initial.pyz
test_tenant_schemas/companies/: apps.py  models.py
test_tenant_schemas/companies/migrations/: 0001_initial.py
test_tenant_schemas/test_tenant_schemas/: settings.py  urls.py  wsgi.py
test_tenant_schemas/users/: apps.py
test_tenant_schemas/users/migrations/: 0001_initial.py
tests/: conftest.py
tests/fixtures/: db.py  settings.py  tenant.py
tests/test_tenants/: test_backend.py  test_commands.py  test_functional.py  test_middleware.py  test_multitypes.py  test_permission_models.py  test_schema_required.py  test_tasks.py  test_tenants_models.py  test_utils.py
tests/test_tenants/test_models/: test_profilemanager.py  test_signals.py  test_userprofile.py
