[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'


[tool.poetry]
name = "django-tenant-users"
description = "A Django app to extend django-tenants to incorporate global multi-tenant users"
version = "2.1.1"
license = "MIT License"

packages = [
  { include = 'tenant_users' },
]

authors = [
  "Corvia Technologies, LLC <support@corvia.tech>",
]

readme = "README.rst"

repository = "https://www.github.com/Corvia/django-tenant-users"

keywords = [
  "django",
  "django-tenant-users",
]

classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.8.1"
Django = ">=4.2"
django-tenants = "^3.6"


[tool.poetry.group.test.dependencies]
# Type Checking
mypy = "1.10.1"
django-stubs = { version = "5.0.2", extras = ["compatible-mypy"] }

# Code Quality
nitpick = ">=0.32,<0.36"
safety = ">=2.2,<4.0"
black = ">=22.8,<25.0"
ruff = ">=0.5.0,<0.10.0"
rstfmt = "0.0.14"

# Testing Utilities
pytest = ">=7.2.2,<9.0.0"
pytest-cov = ">=4,<6"
pytest-randomly = "^3.12"
pytest-django = "^4.5.2"
pytest-deadfixtures = "^2.2.1"
pytest-testmon = ">=1.3.3,<3.0.0"
pytest-timeout = "^2.1.0"
hypothesis = { version = "^6.55.0", extras = ["django", "pytest", "pytz"] }

# Documentation and Formatting
doc8 = ">=0.11,<1.2"

# Configuration and Database
tomlkit = ">=0.13.0,<0.14"
python-decouple = "^3.6"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.docs]
optional = true


[tool.poetry.group.docs.dependencies]
sphinx = ">=5.0,<8.0"
sphinx-rtd-theme = ">=1.3,<4.0"
sphinx-autodoc-typehints = ">=1.19.5,<3.0.0"
m2r2 = "^0.3"
psycopg2-binary = "^2.9.6"
tomli = "^2.0.1"


[tool.doc8]
max-line-length = 88


[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",      # Type hints related, let mypy handle these.
    "COM812",   # "Trailing comma missing". If black is happy, I'm happy.
    "D1",        # Docstrings related
    "E501",     # "Line too long". If black is happy, I'm happy.
    "EM101",    # "Exception must not use a string literal, assign to variable first"
    "EM102",    # "Exception must not use an f-string literal, assign to variable first"
    "PTH",      # User Pathlib stuff over os.*. Should migrate to Pathlib at some point.
    "RET504",   # "Unnecessary variable assignment before `return` statement"
    "S101",     # "Use of `assert` detected"
    "SIM108",   # "Use ternary operator ...". Ternary is harmful for readability in some cases.
    "TRY003",   # "Avoid specifying long messages outside the exception class"
    ]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["RUF012"]
"docs/conf.py" = ["INP001"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"
